choosing when to update dt. choosing when to update particle update function. choosing when to update resampling function. tuning model covariance parameters.

--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>slam_mcmc</name>
+  <name>MCL_PI</name>
   <version>0.0.0</version>
   <description>The slam_mcmc package</description>
 
